# chip8

./: CMakeLists.txt
src/: app.c  app.h  cpu.c  cpu.h  display.c  display.h  main.c  rom.c  rom.h  utils.h
